[package]
name = "yggdrasil-shared"
version = "0.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil Shared Structure"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
documentation = "https://docs.rs/yggdrasil-shared"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
lsp-types = { version = "0.91.1", features = ["proposed"], optional = true }
# lsp-document = "0.4.0"
url = "2.2.2"
anyhow = "1.0.52"
ariadne = "0.1.3"
ropey = "1.3.2"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
